--- a/site/public/index.html
+++ b/site/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <meta property="og:url" content="https://lunchdeal.li" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Lunch Deal - Dein tägliches Mittagsangebot" />
+    <meta property="og:description" content="Entscheide dich aus einer zentralen Übersicht von Mittagsangeboten der Restaurants von Leipzig" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
