--- a/site/public/index.html
+++ b/site/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lunch Deal</title>
     <meta property="og:url" content="https://lunchdeal.li" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Lunch Deal - Dein tägliches Mittagsangebot" />
