--- a/site/public/index.html
+++ b/site/public/index.html
@@ -29,6 +29,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Lunch Deal - Dein tägliches Mittagsangebot" />
     <meta property="og:description" content="Entscheide dich aus einer zentralen Übersicht von Mittagsangeboten der Restaurants von Leipzig" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <link href="bootstrap-custom.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
